--- a/csaw_function_CLEAN_ET.Rmd
+++ b/csaw_function_CLEAN_ET.Rmd
@@ -888,13 +888,13 @@ csaw_analysis(
   mode        = "region",             # "window" or "region"
   out_obj     = count_results,        # <- REQUIRED so we have counts for merging/coords
   reference_strain = "WT",
-  fdr_cutoff  = 0.05,
-  pvalue_cutoff = 0.05, 
-  write_csv_results = TRUE,
-  write_csv_heatmap = TRUE,
-  write_igv   = TRUE,
-  mask_region = TRUE,
-  out_dir     = "CAF-1_Full_genome_Analysis", #output dir, name whatever you want
+  fdr_cutoff  = NULL,
+  pvalue_cutoff = NULL, 
+  write_csv_results = FALSE,
+  write_csv_heatmap = FALSE,
+  write_igv   = FALSE,
+  mask_region = FALSE,
+  out_dir     = "TEST", #output dir, name whatever you want
   merge_tol   = 300                   # only affects genomewide window mode
 )
 
@@ -2147,11 +2147,11 @@ peaks_win <- heatmap_to_bed_peaks(
 
 # Example 2: vInput heatmap, enriched regions per strain across a pre-determined region set (i.e. all genes)
 peaks <- heatmap_to_bed_peaks(
-  hm_df         = H3K27me3_CS_Heatmap_K27promTSS_vInput,  # masked heatmap over K27promTSS regions
-  out_dir       = "csaw_beds/H3K27me3_vInput",
-  prefix        = "H3K27me3_methylated_genes",
+  hm_df         = H3K27me3_CS_Heatmap_K27promTSS_vWT,  # masked heatmap over K27promTSS regions
+  out_dir       = "csaw_beds/H3K27me3_vWT",
+  prefix        = "H3K27me3_lost_genes",
   mode          = "region",
-  direction     = "positive",
+  direction     = "negative",
   min_value     = 2,                         
   merge_windows = FALSE,                     # ignored in region mode anyway
   zero_based    = TRUE,
@@ -2194,7 +2194,7 @@ K36_not_lost_bed = subset(K27_genes, ! K27_genes$V10 %in% K36_lost_bed$V10)
 write.table(K36_lost_bed, file = "CAF-1_H3K36me3_lost_K27_genes.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 write.table(K36_not_lost_bed, file = "CAF-1_H3K36me3_not_lost_K27_genes.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 
-#Subset files from bed file function (later in script). Here, I am pulling out all genes that dont have H3K36 in ash-1, and that arent in K27 regions
+#Subset files from bed file function (later in script). Here, I am pulling out all genes that don't have H3K36 in ash-1, and that aren't in K27 regions
 gr_wt   <- GRanges(H3K36me3_allgenes_vInput_WT_BED$seqnames,
                    IRanges(H3K36me3_allgenes_vInput_WT_BED$start + 1,
                            H3K36me3_allgenes_vInput_WT_BED$end))
@@ -2204,30 +2204,29 @@ gr_ash1 <- GRanges(H3K36me3_allgenes_vInput_ash1_BED$seqnames,
 
 WT_not_in_ash1 <- H3K36me3_allgenes_vInput_WT_BED[countOverlaps(gr_wt, gr_ash1) == 0, ]
 
-H3K36me3_no_ash1 <- regions$allgenes %>%
-  left_join(
-    WT_not_in_ash1, #you may have to change the column names 
-    by = c("V1" = "seqnames", "V2" = "start", "V3" ="end")
-  )
+#ash-1 methylated genes
+H3K36me3_no_ash1 = subset(H3K36me3_lost_genes_log2FC_1_ash1_genes_BED, H3K36me3_lost_genes_log2FC_1_ash1_genes_BED$V10 %in% regions$allgenes$V10 )
 
-gr_regions <- GRanges(regions$allgenes$V1, IRanges(regions$allgenes$V2, regions$allgenes$V3))
-gr_wtonly  <- GRanges(WT_not_in_ash1$seqnames, IRanges(WT_not_in_ash1$start + 1, WT_not_in_ash1$end))
+#ash-1 methylated, non-K27
+H3K36me3_no_ash1_nonK27 = subset(H3K36me3_no_ash1, ! H3K36me3_no_ash1$V10 %in% K27_enriched$V10 )
 
-#No ash-1
-H3K36me3_no_ash1 <- regions$allgenes[countOverlaps(gr_regions, gr_wtonly) > 0, ]
+#Not ash-1 methylated
+H3K36me3_set2_meth <- subset(regions$allgenes, ! regions$allgenes$V10 %in% H3K36me3_no_ash1$V10 & ! regions$allgenes$V10 %in% K27_enriched$V10)
 
-suppressPackageStartupMessages(library(GenomicRanges))
+#write files
+write.table(H3K36me3_no_ash1_nonK27, file = "ash1_meth_nonK27.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 
-gr_A <- GRanges(H3K36me3_no_ash1$V1, IRanges(H3K36me3_no_ash1$V2 + 1, H3K36me3_no_ash1$V3))  # BED start +1
-gr_B <- GRanges(regions$K27genes$V1,       IRanges(regions$K27genes$V2,       regions$K27genes$V3))     # region coords (1-based)
+write.table(H3K36me3_set2_meth, file = "set2_meth_only.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 
-#No ash-1, no K27
-H3K36me3_no_ash1_NOTin_K27genes <- H3K36me3_no_ash1[countOverlaps(gr_A, gr_B) == 0, ]
+#K27 enrichment
+K27_enriched = subset(H3K27me3_promTSS_enriched_log2FC_2_WT_genes_BED, H3K27me3_promTSS_enriched_log2FC_2_WT_genes_BED$V10 %in% H3K27me3_prom_enriched_log2FC_2_WT_genes_BED$V10)
 
-write.table(H3K36me3_no_ash1_NOTin_K27genes, file = "H3K36me3_no_ash1_noK27.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+H3K27me3_inCAF1 = subset(K27_enriched, ! K27_enriched$V10 %in% H3K27me3_lost_genes_log2FC_2_cac1_genes_BED$V10 | ! K27_enriched$V10 %in% H3K27me3_lost_genes_log2FC_2_cac2_genes_BED$V10)
 
-write.table(CAC3_lost_only, file = "cac3_H3K27me3_promoter_LOST.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+H3K27me3_noCAF1 = subset(K27_enriched, K27_enriched$V10 %in% H3K27me3_lost_genes_log2FC_2_cac1_genes_BED$V10 | K27_enriched$V10 %in% H3K27me3_lost_genes_log2FC_2_cac2_genes_BED$V10)
+ 
+write.table(H3K27me3_inCAF1, file = "H3K27me3_CAF1_retain.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+write.table(H3K27me3_noCAF1, file = "H3K27me3_CAF1_lost.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE) 
 
-write.table(CAF1_lost, file = "cac1-2_H3K27me3_promoter_LOST.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 
 ```
